--- a/Absorption_MS_Analysis_Public.Rmd
+++ b/Absorption_MS_Analysis_Public.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Revised Statistical Analysis: Absorption"
 author: "Dana Swarbrick"
-date: "30/07/2023"
+date: "16/12/2023"
 output: 
   html_document: 
     toc: true
@@ -9,11 +9,12 @@ output:
 ---
 
 # File Description 
-This file contains the analyses for the revised absorption manuscript (Swarbrick, Martin, et al., 2023).
+This file contains the analyses for the revised absorption manuscript (Swarbrick, Martin, et al., 2023). This file contains results from the manuscript which underwent one round of major and one round of minor revisions.  
 
 # Abstract 
-Musical absorption is a multi-dimensional phenomenon that has been understood variously in relation to strong, immersive, and transformative musical encounters. Previous research has examined musical absorption in accounts of contemporary dance performances, everyday music listening situations, and during performances by professional ensembles. In this exploratory paper, we used phenomenological and psychological approaches to understand audience members’ musical absorption and affective experience at the MusicLab Copenhagen with the Danish String Quartet research concert. The analysis of social context (live vs. livestreamed audience participation) and audience motion in relation to absorption offers novel insight into live music experience. 
-To aid further conceptual clarification and phenomenological understanding, we also examined musical absorption’s relation to 1) attention, mind-wandering, and senses of transformation; 2) related affective phenomena including feeling moved/touched and awe; 3) motion and stillness; and 4) live and livestreamed audience experience. There were 91 participants in the live audience and 43 participants in the livestreaming audience who completed questionnaires after each piece in the concert and who had their motion measured. Drawing on methods from experimental psychology, we found that 1) being ‘absorbed in the music’ was not related to mind-wandering, yet it was related to a sense of positive transformation; 2) musical absorption was related to experiences of feeling moved, awe, connectedness, and enjoyment, and to reports of being an admirer before the concert and familiarity with the music; and 3) motion was an indicator of an embodied experience of musical absorption that varied with social context, as reports of musical absorption were related to more motion in the live audience and less motion in the livestreaming audience. The interdisciplinary nature of this paper allows us to engage in a phenomenologically informed and empirically enriched discussion of musical absorption and related affective and attentional dynamics.
+Musical absorption is a multi-dimensional phenomenon that has been understood in various ways, but is related to strong, immersive, and transformative musical encounters. For this exploratory paper, we used a phenomenologically and psychologically informed questionnaire to measure audience members’ reports of musical absorption and affective experiences at the MusicLab Copenhagen research concert with the Danish String Quartet (DSQ). 
+We aimed to examine the relation between musical absorption and 1) attention, mind-wandering, and senses of transformation; 2) affective phenomena of feeling moved/touched and awe; 3) social context as manipulated with the technological mediation of a livestreamed concert; 4) musical context (Beethoven, Schnittke, and Folk tunes); and 5) motion. There were 91 participants in the live audience and 43 participants in the livestreaming audience who completed questionnaires after each piece in the concert and who had their motion measured through an application that recorded accelerometer data from their smartphones. Drawing on methods from experimental psychology, we found that 1) being ‘absorbed in the music’ was not related to mind-wandering, but it was related to a sense of positive transformation; 2) musical absorption was related to experiences of feeling moved, awe, connectedness, and enjoyment, and to being an “admirer” of the DSQ as well as to being familiar with the music; and 3) motion was an indicator of an embodied experience of musical absorption that varied with social context, as reports of musical absorption were related to more motion in the live audience during the folk tunes and less motion in the livestreaming audience during all pieces. We use these results to engage in a phenomenologically informed and empirically enriched discussion of musical absorption and related affective and attentional dynamics.
+
 
 # Load data
 ```{r}
@@ -32,8 +33,8 @@ package.check <- lapply(
   packages,
   FUN = function(x) {
     if (!require(x, character.only = TRUE)) {
-      install.packages(x, dependencies = TRUE)
-      library(x, character.only = TRUE)
+        install.packages(x, dependencies = TRUE)
+        library(x, character.only = TRUE)
     }
   }
 )
@@ -49,6 +50,7 @@ citation("rstatix")
 citation("rmcorr")
 citation("ggplot2")
 citation("ggpubr")
+citation("easystats")
 ```
 
 
@@ -136,7 +138,7 @@ describe(musical_absorption.wide)
 ```
 
 ```{r}
-describeBy(musical_absorption.wide, group="ID")
+#describeBy(musical_absorption.wide, group="ID")
 ```
 
 ```{r}
@@ -390,6 +392,17 @@ ggsave(graphname, width = 12, height = 10, units = 'cm', dpi = 500)
 
 ```
 
+
+## Transformation and Feelings
+Check the mean and standard deviation of positive and negative transformation and feelings. This is reported in Supplementary Table 1.
+```{r}
+feelings_transformation<-df.full%>%select(Pt_ID, contains(c("transformed", "positive", "negative")))%>%pivot_longer(!Pt_ID, names_to = c("var", "piece"),names_pattern ="(.*)_(.*)", values_to = "response")%>%
+  group_by(piece, var)%>%summarise(m = mean(response, na.rm = TRUE), sd = sd(response, na.rm = TRUE), n = n())%>%pivot_wider(names_from = "var", values_from = c("m", "sd"))
+
+feelings_transformation
+```
+
+
 # 3.3 Repeated Measures Correlations
 Section 3.3 What is the relation between absorption in the music, the other attention/affect items, and other affective variables?
 
@@ -510,8 +523,8 @@ rm_correlation.matrix(output, colours_blue_white_red, Title, Subtitle)
 graphname<-paste0("../revised_plots/RM_Correlations_continuous_fdr_nona.png")
 ggsave(graphname, width = 12, height = 10, units = 'cm', dpi = 500, bg = "white")
 
-graphname<-paste0("../revised_plots/Publication_Figures/RM_Correlations_continuous_fdr.jpg")
-ggsave(graphname, width = 12, height = 10, units = 'cm', dpi = 500, bg = "white")
+#graphname<-paste0("../revised_plots/Publication_Figures/RM_Correlations_continuous_fdr.jpg")
+#ggsave(graphname, width = 12, height = 10, units = 'cm', dpi = 500, bg = "white")
 ```
 
 Inspect the rmcorr values and p-values to write the results section
@@ -1364,7 +1377,6 @@ baseline<-lmer(Absorption ~ 1 + (1+mQoM|Pt_ID), data = data, REML = FALSE)
 pieceM<-lmer(Absorption ~ 1 + piece + (1+mQoM|Pt_ID), data = data, REML = FALSE)
 anova(baseline, pieceM)
 data%>%group_by(piece)%>%summarize(n())
-
 ```
 
 Report parameter estimates with REML
@@ -1378,13 +1390,17 @@ plot(piece_group_x_qomM)
 summary(piece_group_x_qomM)
 ```
 
-check model parameter estimates to understnad the intraction between group and motion on absorption
+check model parameter estimates to understand the interaction between group and motion on absorption
 
 ```{r}
-plot(parameters(piece_group_x_qomM))
+#library(ggplot2)
+library(see)
+library(parameters)
+plot(model_parameters(piece_group_x_qomM))
 ```
 
 ```{r}
+library(modelbased)
 slopes<-estimate_slopes(piece_group_x_qomM, trend = "mQoM", at = "group")
 
 plot(slopes)
@@ -1393,6 +1409,7 @@ plot(slopes)
 ```{r}
 slopes
 ```
+
 ```{r}
 estimate_contrasts(piece_group_x_qomM, at = "mQoM", contrast = "group")
 ```
@@ -1469,7 +1486,7 @@ require(lattice)
 qqmath(piece_group_x_qomM, id=0.05) #id: identifies values that may be exerting undue influence on the model (i.e. outliers
 ```
 
-#### Visualize
+### Visualize
 Figure 4 in the manuscript
 ```{r}
 #update group label
@@ -1484,7 +1501,7 @@ p<-data_u_extreme%>%
   geom_point(alpha = .5)+
   labs(title =title,subtitle = subtitle, x = "Mean QoM", y = "Absorption")+
   geom_smooth(method = lm)+
-  facet_grid(rows = vars(piece), cols = vars(group))+
+  facet_grid(cols = vars(group))+
   theme_minimal()+
   stat_cor(aes(label = ..r.label..), label.x.npc = .67, color = "blue", geom = "label")#+
   #stat_cor(aes(label = ..rr.label..), label.x.npc = .65, color = "blue", geom = "label")+
@@ -1496,11 +1513,11 @@ p<-data_u_extreme%>%
 p
 
 graphname<-paste0("../revised_plots/", title,subtitle, ".png")
-ggsave(graphname, width = 15, height = 10, units = 'cm', dpi = 500)
+ggsave(graphname, width = 15, height = 8, units = 'cm', dpi = 500)
 
 
 graphname<-paste0("../revised_plots/Publication_Figures/", title,subtitle, ".jpg")
-ggsave(graphname, width = 15, height = 10, units = 'cm', dpi = 500, bg = "white")
+ggsave(graphname, width = 15, height = 8, units = 'cm', dpi = 500, bg = "white")
 ```
 
 
